--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Muli', sans-serif;
-  background-image: url(cosmos.jpg);
+  background-image: url(img/cosmos.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   overflow-x: hidden;
